# Bucky-Bank-Solana

./: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
Deck/: BuckyBank-Deck.html
anchor/: Anchor.toml  Cargo.toml  tsconfig.json
anchor/programs/bucky-bank/: Cargo.toml
anchor/programs/bucky-bank/src/: constants.rs  error_code.rs  events.rs  lib.rs
anchor/programs/bucky-bank/src/instructions/: create_bucky_bank.rs  (+6 more)
anchor/src/: bucky-bank-exports.ts  index.ts
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BuckyBankList.tsx  ChildPiggyBank.tsx  ParentDashboard.tsx  PiggyBank.tsx  WithdrawalApprovalPanel.tsx  WithdrawalButton.tsx  WithdrawalConfirmationPanel.tsx  WithdrawalRequestsList.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/dbhooks/: useGetApprovedWithdrawalRequests.ts  useGetBuckyBank.ts  useGetDepositsByBuckyBankId.ts  useGetParentPendingRequests.ts  useGetWithdrawByBuckyBankId.ts  useGetWithdrawalRequests.ts
frontend/src/lib/: anchor-exports.ts  api.ts  bucky-bank-data-access.ts
frontend/src/mutations/: approve_withdrawal.ts  claim_saving_rewards.ts  create_bucky_bank.ts  deposit.ts  request_withdrawal.ts  withdraw.ts
frontend/src/providers/: ClusterProvider.tsx  ReactQueryProvider.tsx  SolanaDappProvider.tsx  SolanaProvider.tsx
frontend/src/types/: index.ts
indexer/: Cargo.toml  Dockerfile  Makefile  config.example.toml
indexer/src/: config.rs  database.rs  handlers.rs  health.rs  indexer.rs  logging.rs  main.rs
(+5 files in other folders)
