[package]
name = "bucky_bank_indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bucky_bank_indexer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
solana-client = "3.0.7"
solana-sdk = "3.0.0"
solana-transaction-status = "3.0.7"
solana-rpc-client-types = "3.0.7"
anchor-lang = "0.31.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }
tracing-appender = "0.2"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
dotenvy = "0.15"
axum = { version = "0.7", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
base64 = "0.22"
borsh = "1.5"
fnv = "1.0.7"
zeroize = "1.3.0"
